# kagura

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TODO.md  build.sh  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  pass_proposal.yml
.github/workflows/: build-android-plugin.yml  ci.yml  docs.yml  release.yml
docs/: architecture.ja.md  architecture.md  configuration.ja.md  configuration.md  contributing.ja.md  game-protection.ja.md  game-protection.md  index.ja.md  index.md  pass-order.ja.md  pass-order.md  runtime.ja.md  runtime.md  security-model.md  testing.ja.md  testing.md  tuning.ja.md  tuning.md
docs/cookbook/: banking.md  drm.md  index.md  mobile-game.md  sdk-vendor.md
docs/getting-started/: build-from-source.ja.md  build-from-source.md  index.ja.md  index.md  quick-start.ja.md  quick-start.md  requirements.ja.md  requirements.md
docs/integration/: android.ja.md  android.md  bazel.ja.md  bazel.md  cmake.ja.md  cmake.md  cocoapods.ja.md  cocoapods.md  index.ja.md  index.md  swiftpm.ja.md  swiftpm.md  unity.ja.md  unity.md  unreal.ja.md  unreal.md  xcode.ja.md  xcode.md
docs/passes/: anti-analysis.ja.md  anti-analysis.md  before-after.ja.md  before-after.md  control-flow.ja.md  control-flow.md  data.ja.md  data.md  index.ja.md  index.md  infrastructure.ja.md  (+5 more)
integration/bazel/: BUILD.bazel  README.md  kagura.bzl
lib/Transforms/: AntiDebug.cpp  AntiTamper.cpp  BasicBlockReordering.cpp  BasicBlockSplitting.cpp  CMakeLists.txt  CallIndirection.cpp  DeadCodeInsertion.cpp  FunctionSplit.cpp  GlobalEncryption.cpp  IndirectBranch.cpp  LegacyPlugin.cpp  LoopTransform.cpp  ObfuscationMetrics.cpp  Options.cpp  PassRegistry.def  Plugin.cpp  PointerAuth.cpp  StringEncryption.cpp  StringEncryptionAES.cpp  SymbolVisibility.cpp  Utils.cpp
lib/Transforms/AntiAnalysis/: AntiDebug.cpp  AntiTamper.cpp  BasicBlockChecksum.cpp  CallIndirection.cpp  HoneyValue.cpp  PointerAuth.cpp  SymbolVisibility.cpp  Telemetry.cpp
lib/Transforms/CFG/: BasicBlockReordering.cpp  BasicBlockSplitting.cpp  BogusControlFlow.cpp  ControlFlowFlattening.cpp  DeadCodeInsertion.cpp  FunctionSplit.cpp  IndirectBranch.cpp  LoopTransform.cpp  VTableProtection.cpp
lib/Transforms/Data/: AES128.h  CSEBreak.cpp  ConstantObfuscation.cpp  EncryptedLookupTable.cpp  GlobalEncryption.cpp  MemoryValueObfuscation.cpp  PointerEncryption.cpp  StringEncryption.cpp  StringEncryptionAES.cpp  StringSplit.cpp  Substitution.cpp  WideStringEncryption.cpp
lib/Transforms/Infrastructure/: AuditLog.cpp  AutoSelect.cpp  ConfigLoader.cpp  DWARFControl.cpp  SymbolMap.cpp
lib/Transforms/Platform/: JNIObfuscation.cpp  ObjCObfuscation.cpp  VMObfuscation.cpp
runtime/: CMakeLists.txt  anti_debug.c  apk_integrity.c  blob_integrity.c  breakpoint_detection.c  direct_syscall.c  game_values.c  hook_detection.c  integrity_report.c  ios_integrity.c  jailbreak_detection.c  jni_hook_detection.c  proc_inspection.c  soft_response.c  split_apk.c  swift_protection.c  testflight_detect.c  vm_interpreter.c
runtime/android/: android_root_advanced.c  apk_integrity.c  art_environment.c  direct_syscall.c  elf_integrity.c  jni_hook_detection.c  load_order.c  play_integrity.c  proc_inspection.c  safetynet_compat.c  seccomp_checks.c  split_apk.c
runtime/anti_debug/: anti_debug.c  anti_dump.c  breakpoint_detection.c  emulator_detection.c  hook_detection.c  loaded_library_scan.c  soft_response.c  symbol_interposition.c
runtime/core/: aes.c  blob_integrity.c  crash_symbolication.c  device_key.c  vm_interpreter.c  zero_buf.c
runtime/game/: behavior_log.c  game_values.c  il2cpp_protection.c  integrity_report.c  state_integrity.c  ue4_protection.c
runtime/ios/: device_attest.c  fishhook_countermeasure.c  ios_integrity.c  ios_jailbreak_advanced.c  ios_platform.c  macho_integrity.c  objc_name_remap.c  swift_protection.c  testflight_detect.c
runtime/windows/: anti_debug.c  device_key.c  etw_detection.c  integrity.c  tamper_response.c
samples/basic/: CMakeLists.txt  main.c
scripts/: attacker_cost_model.py  battery_impact.py  differential-test.sh  kagura-cli.py  kagura-diff.py  kagura-strip.py  license_manager.py  review-risk-assessment.sh  variant_generator.py  verify-reproducible.sh
tests/: CMakeLists.txt  run_pass_test.cmake
tests/decompiler_eval/: README.md  run_ghidra_eval.py
tests/frida_resistance/: README.md
tests/frida_resistance/probes/: F1_intercept_decrypt.js  F7_stalker_trace.js
tests/fuzz/: CMakeLists.txt  fuzz_bbr.cpp  fuzz_bcf.cpp  fuzz_common.h  fuzz_fla.cpp  fuzz_fsplit.cpp  fuzz_mvo.cpp  fuzz_pe.cpp  fuzz_str.cpp  fuzz_sub.cpp  fuzz_vm.cpp  fuzz_vtp.cpp
tests/inputs/: loop_test.c  pointer_test.c  string_test.c
tests/integration/: CMakeLists.txt  run_integration_test.cmake
tests/integration/subjects/: README.md  arithmetic_smoke.c  fibonacci.c  loop_smoke.c  string_smoke.c
tests/lit/: basic-block-reordering.ll  basic-block-splitting.ll  bogus-control-flow.ll  call-indirection.ll  constant-obfuscation.ll  control-flow-flattening.ll  cse-break.ll  dead-code-insertion.ll  deterministic-output.ll  dwarf-control.ll  function-split.ll  global-encryption.ll  honey-value.ll  indirect-branch.ll  lit.cfg.py  lit.site.cfg.py.in  loop-transform.ll  memory-value-obfuscation.ll  string-encryption-aes.ll  string-encryption.ll  string-split.ll  substitution.ll  swift-kotlin-string-encryption.ll  symbol-visibility.ll  vm-obfuscation.ll  vtp-msvc.ll  wasm-pass-filter.ll  wide-string-encryption.ll
tests/pass-inputs/: README.md  arithmetic_test.c  combined_test.c  control_flow_test.c  indirect_branch_test.c  vm_test.c
tests/redteam/: README.md  run_redteam.py
tests/regression/: CMakeLists.txt  README.md
tests/regression/corpus/: crash_00004.ll  eh_bbr.ll  eh_mvo_pe.ll  empty_function.ll  fsplit_phi_successor.ll  phi_heavy_fla.ll  vararg_passthrough.ll  vm_large_function.ll
tests/regression/scripts/: add_crash.sh
tests/symbolic_exec/: README.md  run_angr_eval.py
tools/: CMakeLists.txt  kagura-opt.cpp
(+30 files in other folders)
